cabal-version:      3.14
name:               example
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:


common warnings
    ghc-options: -Wall

test-suite example-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          Main.hs
    build-depends:    base ^>=4.20.2.0,
                      HUnit
